Some platform dependent fixes and binary file

--- a/lib/metacl/templates/wrapper.cl.template
+++ b/lib/metacl/templates/wrapper.cl.template
@@ -1,5 +1,10 @@
 #include <iostream>
-#include "cl.hpp"
+
+#if defined(__APPLE__) || defined(__MACOSX)
+#include <OpenCL/cl.hpp>
+#else
+#include <CL/cl.hpp>
+#endif
 
 {{{outer_code}}}
 
